--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,7 @@ Mkfile.old
 dkms.conf
 .DS_Store
 *.save
+
+/ML_Case_Study/Week5/song_data.csv
+/ML_Case_Study/Week6/image_test_data.csv
+/ML_Cluster_Retrieval/Week2/people_wiki.csv
